# data_ingestion

./: Dockerfile  Makefile  README.md  convert.sh  pyproject.toml  requirements.txt  setup.sh
data_ingestion/: data_ingestion.py
